# course-scout

./: .env.example  Dockerfile  config.yaml  docker-compose.nas.yml  docker-compose.yml  pyproject.toml
data/: reports.db
scripts/: check_db.py  fetch_groq_models.py  smoke_test.py  verify_bot_simple.py
src/course_scout/application/: digest.py
src/course_scout/domain/: models.py
src/course_scout/infrastructure/: agents.py  reporting.py  summarization.py
src/course_scout/infrastructure/providers/: claude_provider.py  openai_provider.py
src/course_scout/interfaces/cli/: main.py
src/telebot/application/: digest.py  worker.py
src/telebot/infrastructure/: agents.py  config.py  notifier.py  persistence.py  reporting.py  summarization.py  telegram.py
src/telebot/interfaces/cli/: main.py
src/telebot/interfaces/mcp/: main.py
tests/domain/: test_models.py
tests/infrastructure/: test_agents.py  test_schema_parsing.py  test_summarization.py
